<resources>
    <string name="app_name">Diplomski</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_phoneNumber">Phone number</string>
    <string name="action_createProfile">Create profile</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_username_already_taken">Username already taken</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_imageLabel">Add image</string>
    <string name="prompt_describe">Describe</string>
    <string name="prompt_price">Price</string>
    <string name="action_save_admin">Save</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_to_short_username">This username is too short</string>
    <string name="error_invalid_to_short_password">This password is too short</string>
    <string name="error_invalid_password2">Confirm password is not correct</string>
    <string name="title_activity_main">Restaurant menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_admin"></string>
    <string name="action_add_category">Add category</string>
    <string name="action_add_drink">Add drink</string>
    <string name="action_add_food">Add food</string>

    <string name="text_something_went_wrong">Something Went wrong</string>

    <string name="confirm_selected_items">Confirm selected items</string>

    <string name="prompt_comment">Comment</string>
    <string name="menu_rate_and_comment">Rate and comments</string>
    <string name="menu_show_comments">Show comments</string>

    <string name="action_shop">Shop</string>
    <string name="prompt_currency">Currency for price</string>
    <string name="delete_item_ord">Delete item</string>
    <string name="edit_item_ord">Edit item</string>
    <string name="prompt_sort_number">Regular number in the menu</string>
    <string name="prompt_table_number">Table number</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="status_reject">Reject order</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="delete_order">Delete order</string>
    <string name="get_all_orders">Get all orders</string>

</resources>
