<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_status_in_progress"
        android:orderInCategory="100"
        android:title="@string/status_in_progress"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/action_status_reject"
        android:orderInCategory="100"
        android:title="@string/status_reject"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_status_completed"
        android:orderInCategory="100"
        android:title="@string/status_completed"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/action_delete_item_orders"
        android:orderInCategory="100"
        android:title="@string/delete_order"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/action_get_all_orders"
        android:orderInCategory="100"
        android:title="@string/get_all_orders"
        app:showAsAction="never"
        android:visible="false"
        />
</menu>