<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_confirm_selected_items"
        android:orderInCategory="100"
        android:title="@string/confirm_selected_items"
        android:icon="@drawable/ic_listview_done"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_rate_and_comment"
        android:orderInCategory="100"
        android:title="@string/menu_rate_and_comment"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_show_comments"
        android:orderInCategory="100"
        android:title="@string/menu_show_comments"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_delete_item"
        android:orderInCategory="100"
        android:title="@string/delete_item_ord"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_action_delete"
        />

    <item
        android:id="@+id/action_edit_item"
        android:orderInCategory="100"
        android:title="@string/edit_item_ord"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="never"
        android:visible="false"
        />

</menu>