<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="elfak.diplomski.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:weightSum="1"
    android:background="@drawable/new_login2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        />


    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?android:attr/actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="false"
            android:weightSum="1">

            <!--<ImageButton
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:id="@+id/imageButton"
                android:scaleType="fitStart"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/imageLabel"
                android:text="@string/text_imageLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                />-->


                <EditText
                    android:id="@+id/username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    />


                <EditText
                    android:id="@+id/password2_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password2"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/lastname_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/phoneNumber_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phoneNumber"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:shadowColor="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:layout_marginBottom="10dp"
                    />


    <Button
        android:id="@+id/createProfile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/action_createProfile"
        android:textStyle="bold"
        android:background="@drawable/button_border"
        android:textColor="@color/white"
        android:textSize="@dimen/font_margin_medium"

        />

        </LinearLayout>


    </ScrollView>



</LinearLayout>
