<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elfak.diplomski.LoginActivity"
    android:background="@drawable/new_login2"

    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"> -->

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:shadowColor="@android:color/white"
                android:textColorLink="@android:color/white"
                android:layout_marginTop="60dp"

                tools:targetApi="lollipop"
                tools:ignore="Deprecated" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <!-- <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">       android:imeActionId="@+id/login" -->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                tools:ignore="InvalidImeActionId,UnusedAttribute" />

            <!-- </android.support.design.widget.TextInputLayout> -->

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/button_border"
                android:textSize="@dimen/font_margin_medium"
                />


            <Button
                android:id="@+id/return_users"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="OR"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/Transparent"
                android:textSize="@dimen/font_margin_medium"
                />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                android:textSize="@dimen/font_margin_medium"
                />

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
